<resources>
    <string name="app_name">Budget Manager</string>
    <string name="placeholder">{PLACEHOLDER}</string>


    <string name="title_activity_budget">BudgetActivity</string>
    <string name="budgets_text">Budgets</string>
    <string name="items_text">Items</string>
    <string name="grill_icon_text">#</string>
    <string name="name_text">Name</string>
    <string name="price_text">Price</string>
    <string name="added_text">Added</string>
    <string name="description_text">Description</string>
    <string name="hyphen">-</string>

    <!--Navigation elements-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_category">Category</string>

    <!--Elements-->
    <string name="email_address_text">Email Address</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="password_confirm_text">Confirm password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="first_name_text">First Name</string>
    <string name="optional_text">(*optional)</string>
    <string name="last_name_text">Last Name</string>
    <string name="username_text">Username</string>
    <string name="registration_text">Registration</string>
    <string name="categories_text">Categories</string>
    <string name="enable_alexa">Enable Alexa</string>
    <string name="add_category">Add Category</string>
    <string name="category_name_enter">Enter Category Name</string>
    <string name="category_description_enter">Enter Category Description</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alexa_code">Alexa code</string>
    <string name="get_alexa_code">Get Alexa Code</string>
    <string name="add_item">Add item</string>
    <string name="item_name_enter">Enter Item Name</string>
    <string name="item_description_enter">Enter Item Description</string>
    <string name="item_price_enter">Enter Item Price</string>
    <string name="statistic_text">Statistic</string>
    <string name="start_date_text">Start Date</string>
    <string name="end_date_text">End Date</string>
    <string name="go">Go</string>
    <string name="months_text">Months</string>
    <string name="general_text">General</string>
    <string name="income_text">Income</string>
    <string name="spending_text">Spending</string>
    <string name="reload_local_db_text">Reload DB</string>


    <!--String format-->
    <string name="open_activity" translatable="false">openActivity: %s</string>
    <string name="format_empty_field">%s cannot be empty!</string>
    <string name="format_incorrect_value">%s is incorrect!</string>

    <!--Preferences name-->
    <string name="visitedPreferences" translatable="false">hasVisited</string>
    <string name="credentialPreferences" translatable="false">credential</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
