<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/dialog_background">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_edit_category_title"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/add_category"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_edit_category_name"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_name_enter"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_category_title" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_edit_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_category_name" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_edit_category_description"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_description_enter"
        app:layout_constraintTop_toBottomOf="@id/et_edit_category_name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_edit_category_description"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_category_description" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_edit_category_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        style="@style/button_primary"
        android:backgroundTint="@color/colorGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_category_description" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_edit_category_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/button_primary"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_category_description" />

</android.support.constraint.ConstraintLayout>