<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_application_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/app_name"
        android:textSize="@dimen/large_text"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        />

    <LinearLayout
        android:id="@+id/login_email_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_application_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address_text"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/medium_text"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_password_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_email_linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/medium_text"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/login_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/login_password_linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/remember_me"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/login_password_linear_layout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:linksClickable="true"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_remember_me"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/medium_text"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_create_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/medium_text"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_sign_in_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_create_new_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/medium_text"
        android:drawableLeft="@drawable/logo_google"
        android:drawableStart="@drawable/logo_google" />

</android.support.constraint.ConstraintLayout>