<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_edit_item_title"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/add_item"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linLay_edit_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_item_title">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_edit_item_price"
            style="@style/MediumText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_price_enter" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_edit_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLay_edit_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linLay_edit_item_price">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_edit_item_name"
            style="@style/MediumText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name_enter" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_edit_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLay_edit_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linLay_edit_item_name">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_edit_item_description"
            style="@style/MediumText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_description_enter" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_edit_item_description"
            style="@style/MediumText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constLay_edit_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linLay_edit_item_description">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_edit_item_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_edit_item_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>