<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <LinearLayout
        android:id="@+id/linLay_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/rg_statistic_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dp">

            <RadioButton
                android:id="@+id/rb_statistic_categories"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background"
                android:button="@null"
                android:checked="true"
                android:gravity="center_horizontal"
                android:text="@string/categories_text"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/rb_statistic_month"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/months_text"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_diagram_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_diagram_general"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background"
                android:button="@null"
                android:checked="true"
                android:gravity="center_horizontal"
                android:text="@string/general_text"
                android:textColor="@color/colorWhite" />

            <RadioButton
                android:id="@+id/rb_diagram_income"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/income_text"
                android:textColor="@color/colorWhite" />

            <RadioButton
                android:id="@+id/rb_diagram_spending"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/spending_text"
                android:textColor="@color/colorWhite" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linLay_selected">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/insert_chart_bar_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/insert_chart_pie_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>